[project]
name = "nice-gui-admin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "html-sanitizer>=2.6.0",
    "matplotlib>=3.10.7",
    "nicegui>=3.4.0",
    "pandas>=2.3.3",
    "pycairo>=1.29.0",
    "pyzmq>=27.1.0",
    "simpy>=4.1.1",
    "tortoise-orm>=0.25.1",
    "websockets>=15.0.1",
]
